[package]
name = "solana-bigtable"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
enum-iterator = "2.1.0"
bincode = "1.3.3"
serde = "1.0.207"
serde_derive = "1.0.207"
bzip2 = "0.4.4"
flate2 = "1.0.31"
zstd = "0.13.2"
solana-storage-proto = "2.0.5"
solana-transaction-status = "2.0.5"
solana-sdk = "2.0.5"
prost = "^0.11.9"

[lib]
crate-type = ["cdylib"]
